# simple_neural_network

./: CMakeLists.txt  main.cpp  network.cpp  network.h
